# beyond-ship-and-pray

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  publish.yml
code/: BOOK_PLAN.md
code/apps/: complaint_agent.yaml  complaint_sut.py
code/catalogs/: base_catalog.yaml  factor_catalog.yaml  (+1 more)
data/: capstone_companions.json  capstone_retrieval.json  capstone_rows.json
demos/: .env.example  README.md  _env.py  _gms.py  _llm.py  demo.ipynb  runtime_monitoring.py  validation_report.py
notebooks/: 01_why_average_accuracy.ipynb  02_base_taxonomy.ipynb  03_enrichment_design_space.ipynb  04_design_and_composition.ipynb  05_design_capstone.ipynb  06_generating_training_data.ipynb  07_agentic.ipynb  08_agentic_capstone.ipynb  09_analysis_capstone.ipynb  10_logistic_attribution.ipynb  10_trajectory_evaluation.ipynb  11_resilience.ipynb  12_trajectory_evaluation.ipynb  13_failure_modes_doe.ipynb  14_test_enrichment.ipynb  15_component_testing.ipynb  16_system_attribution.ipynb  16_testing_agents.ipynb  17_operational.ipynb  18_resilience_testing.ipynb  19_testing_agents.ipynb  20_knowledge_graphs.ipynb  21_gms_primitives.ipynb  22_geode.ipynb  23_geode_capstone.ipynb  24_catalog_base_source.ipynb  25_two_way_recovery.ipynb  26_enrichment_capstone.ipynb  27_training_capstone.ipynb  28_ground_truth.ipynb  29_base_taxonomy.ipynb  README.md  appendix_C_gms_calibration.ipynb
proofloop/: __init__.py
tests/: conftest.py
(+54 files in other folders)
